--- a/papiea-client/package.json
+++ b/papiea-client/package.json
@@ -5,7 +5,7 @@
   "main": "build/entity_client.js",
   "scripts": {
     "clean": "rm -rf build",
-    "build": "tsc"
+    "build": "yarn run tsc"
   },
   "author": "Shlomi Vaknin",
   "license": "ISC",
