--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -9,7 +9,7 @@ RUN cd /code \
 
 # Install yarn
 RUN curl -o- -L yarnpkg.com/install.sh | bash
-ENV PATH="/root/.yarn/bin:/root/.yarn/bin:/root/.config/yarn/global/node_modules/.bin:${PATH}"
+ENV PATH="${PATH}:/root/.yarn/bin:/root/.yarn/bin"
 
 RUN cd /code && make
 
