--- a/papiea-core/package.json
+++ b/papiea-core/package.json
@@ -5,7 +5,7 @@
   "main": "build/core.js",
   "scripts": {
     "clean": "rm -rf build",
-    "build": "ls node_modules && yarn run tsc"
+    "build": "yarn run tsc"
   },
   "author": "",
   "license": "ISC",
