[WIP] Yarn instead of Npm (#391)
* Add package-lock.json remove target and improve README

* Add newly generated package-lock.jsons

* Fix whitespace differences, extract packages to a variable, renamed clean-build

* added yarn instead of npm. Needs testing on other machines

* checking circleci fix

* test circleci

* updated makefile and docker builds

* figuring build problems

* installed yarn in the Dockerfile

* added make

* added update command

* added yarn

* debugging ci docker build

* ls yarn bin

* changed yarn ls debug dir

* tweaking path

* added debug yarn call

* source bashrc

* source bashrc through bash

* removed wait-port and added installation note in readme

* removed redundant line from readme

* alternative method of adding yarn to PATH

* fix to path in bashrc

* Installing yarn (#398)

$HOME was not pointing to /root, which is where yarn was installed.

* fixed build order

* using local tsc

* tsc version debug msg

* removed yarn lock

* removed papiea-engine yarn lock

* upgrade in papiea-engine

* don't use cache

* removed redundant line

* changed path var

* removed part of path

* fixed base image

* regenerated lock files

* include test data factory

* added readme line

Co-authored-by: Shlomi Vaknin <shlomi.vaknin@nutanix.com>

--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -1,14 +1,16 @@
-FROM nutanix-docker.jfrog.io/papiea:base
+FROM nutanix-docker.jfrog.io/papiea:yarn-base
 
 COPY . /code
 WORKDIR /code/papiea-engine
 RUN cd /code \
-    # Use cached node_modules
-    && mv /node_modules /code/papiea-engine/node_modules \
-    && npm cache clean --force \
-    && npm run install-all \
-    && npm install -g typescript \
-    && npm --prefix papiea-engine run build-clj \
-    && npm run build-all 
+    && apt-get update \
+    && apt-get install -y build-essential \
+    && npm --prefix papiea-engine run build-clj
 
-CMD /bin/bash -c "npm run start_differ & npm run start"
+# Install yarn
+RUN curl -o- -L yarnpkg.com/install.sh | bash
+ENV PATH="${PATH}:/root/.yarn/bin"
+
+RUN cd /code && make
+
+CMD /bin/bash -c "yarn run start_differ & yarn run start"
