--- a/papiea-client/package.json
+++ b/papiea-client/package.json
@@ -5,17 +5,16 @@
   "main": "build/entity_client.js",
   "scripts": {
     "clean": "rm -rf build",
-    "build": "tsc"
+    "build": "yarn run tsc"
   },
   "author": "Shlomi Vaknin",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.1",
-    "papiea-core": "file:../papiea-core",
-    "wait-port": "^0.2.2"
+    "papiea-core": "file:../papiea-core"
   },
   "devDependencies": {
-    "typescript": "^3.8.3",
-    "@types/node": "^12.0.2"
+    "@types/node": "^12.0.2",
+    "typescript": "^3.8.3"
   }
 }
