--- a/papiea-engine/Dockerfile
+++ b/papiea-engine/Dockerfile
@@ -1,6 +1,9 @@
 FROM ubuntu:18.04
 
 RUN apt-get update && apt-get upgrade -y \
+    && apt-get install -y build-essential \
+    && apt-get install -y curl \
+    && apt purge cmdtest \
     && apt-get install -y locales \
     && echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen \
     && locale-gen \
@@ -23,13 +26,6 @@ RUN lein
 # Cache .m2
 ADD papiea-lib-clj/project.clj /project.clj
 RUN cd / && lein deps && lein cljsbuild once && rm project.clj
-
-# Cache node_modules
-ADD package.json /package.json
-ADD package-lock.json /package-lock.json
-RUN cd / && npm install && rm package.json && rm package-lock.json
-# Shlomi: In case npm fails with the cryptic "cb() was never called", 
-# remove your host's package-lock.json and rerun `npm install`. 
 
 # Declare the ports we use
 EXPOSE 3000
