--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "clean": "rm -rf build",
-    "build": "tsc",
+    "build": "yarn run tsc",
     "build!": "npm run clean && npm run build",
     "start": "ts-node src/main.ts",
     "start_differ": "ts-node src/diff_resolver_main.ts",
@@ -54,7 +54,7 @@
     "swagger-ui-express": "^4.0.7",
     "uuid": "^3.3.2",
     "uuid-validate": "0.0.3",
-    "wait-port": "^0.2.2"
+    "ts-node": "^7.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
@@ -75,7 +75,6 @@
     "nodemon": "^1.18.8",
     "swagger-parser": "^6.0.2",
     "ts-jest": "^23.10.5",
-    "ts-node": "^7.0.1",
     "typescript": "^3.8.3"
   },
   "jest": {
