--- a/papiea-sdk/package.json
+++ b/papiea-sdk/package.json
@@ -10,7 +10,7 @@
     "test": "jest --runInBand --coverage",
     "test-ci": "jest --runInBand --coverage --ci --reporters=default --reporters=jest-junit",
     "clean": "rm -rf build",
-    "build": "tsc"
+    "build": "yarn run tsc"
   },
   "author": "",
   "license": "ISC",
@@ -24,8 +24,7 @@
     "papiea-core": "file:../papiea-core",
     "pluralize": "^7.0.0",
     "swagger-model-validator": "^3.0.6",
-    "uuid": "^3.3.2",
-    "wait-port": "^0.2.2"
+    "uuid": "^3.3.2"
   },
   "description": "",
   "devDependencies": {
@@ -34,9 +33,9 @@
     "@types/jest": "^23.3.10",
     "@types/js-yaml": "^3.11.4",
     "@types/uuid": "^3.4.4",
-    "typescript": "^3.8.3",
-    "ts-jest": "^23.10.5",
     "jest": "^23.6.0",
-    "jest-junit": "^5.2.0"
+    "jest-junit": "^5.2.0",
+    "ts-jest": "^23.10.5",
+    "typescript": "^3.8.3"
   }
 }
