--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "author": "Shlomi Vaknin",
   "scripts": {
-    "clean-all": "for p in core client backend-utils engine sdk; do yarn --cwd papiea-$p run clean || exit 1; done",
-    "patch-all": "for p in core client backend-utils engine sdk; do yarn --cwd papiea-$p version patch || exit 1; done",
-    "build-all!": "yarn run upgrade-all",
+    "clean-all": "for p in core backend-utils client engine sdk; do yarn --cwd papiea-$p run clean || exit 1; done",
+    "patch-all": "for p in core backend-utils client engine sdk; do yarn --cwd papiea-$p version patch || exit 1; done",
+    "build-all": "for p in core backend-utils client engine sdk; do yarn --cwd papiea-$p install ; yarn --cwd papiea-$p run build || exit 1; done",
+    "build-all!": "yarn run clean-all && yarn run build-all",
     "publish-all": "yarn run build-all! && node publish-papiea.js"
   },
   "repository": {
