--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -52,9 +52,9 @@
     "simple-oauth2": "^2.2.1",
     "swagger-model-validator": "^3.0.19",
     "swagger-ui-express": "^4.0.7",
+    "ts-node": "^7.0.1",
     "uuid": "^3.3.2",
-    "uuid-validate": "0.0.3",
-    "ts-node": "^7.0.1"
+    "uuid-validate": "0.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
@@ -70,11 +70,17 @@
     "@types/uuid": "^3.4.4",
     "@types/uuid-validate": "0.0.0",
     "fast-check": "^1.16.0",
+    "husky": "^4.2.5",
     "jest": "^23.6.0",
     "jest-junit": "^5.2.0",
     "nodemon": "^1.18.8",
+    "prettier": "^2.0.5",
     "swagger-parser": "^6.0.2",
     "ts-jest": "^23.10.5",
+    "tslint": "^6.1.2",
+    "tslint-config-airbnb": "^5.11.2",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.3.0",
     "typescript": "^3.8.3"
   },
   "jest": {
