--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -69,6 +69,11 @@
     "@types/swagger-ui-express": "^3.0.1",
     "@types/uuid": "^3.4.4",
     "@types/uuid-validate": "0.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
+    "eslint": "^7.3.0",
+    "eslint-config-airbnb-typescript": "^8.0.2",
+    "eslint-config-prettier": "^6.11.0",
     "fast-check": "^1.16.0",
     "husky": "^4.2.5",
     "jest": "^23.6.0",
@@ -77,11 +82,7 @@
     "prettier": "^2.0.5",
     "swagger-parser": "^6.0.2",
     "ts-jest": "^23.10.5",
-    "tslint": "^6.1.2",
-    "tslint-config-airbnb": "^5.11.2",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.3.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.5"
   },
   "jest": {
     "transform": {
