--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -69,11 +69,12 @@
     "@types/swagger-ui-express": "^3.0.1",
     "@types/uuid": "^3.4.4",
     "@types/uuid-validate": "0.0.0",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.3.0",
-    "eslint": "^7.3.0",
+    "eslint": "7.2.0",
     "eslint-config-airbnb-typescript": "^8.0.2",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.1",
     "fast-check": "^1.16.0",
     "husky": "^4.2.5",
     "jest": "^23.6.0",
