--- a/papiea-engine/tsconfig.json
+++ b/papiea-engine/tsconfig.json
@@ -15,5 +15,6 @@
       ]
     }
   },
+  "include": ["src", "__tests__", "__benchmarks__"],
   "exclude": ["node_modules", "**/__tests__/*", "build", "**/__benchmarks__/*"]
 }
