--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "papiea-engine",
-  "version": "1.0.86",
+  "version": "1.0.89",
   "description": "",
   "main": "build/main.js",
   "files": [
@@ -51,9 +51,9 @@
     "simple-oauth2": "^2.2.1",
     "swagger-model-validator": "^3.0.19",
     "swagger-ui-express": "^4.0.7",
+    "ts-node": "^7.0.1",
     "uuid": "^3.3.2",
-    "uuid-validate": "0.0.3",
-    "ts-node": "^7.0.1"
+    "uuid-validate": "0.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
