Improvements and fixes

--- a/papiea-engine/__tests__/test_data/cluster_kind_test_data.yml
+++ b/papiea-engine/__tests__/test_data/cluster_kind_test_data.yml
@@ -13,3 +13,7 @@ Cluster:
       type: string
     name:
       type: string
+    priorities:
+      type: array
+      items:
+        type: number
