--- a/.circleci/Dockerfile.publish
+++ b/.circleci/Dockerfile.publish
@@ -1,16 +1,13 @@
 FROM nutanix-docker.jfrog.io/papiea:yarn-base
 
-COPY . /code
+COPY ./papiea-engine /code
 WORKDIR /code/papiea-engine
 RUN cd /code \
     && apt-get update \
-    && apt-get install -y build-essential \
-    && npm --prefix papiea-engine run build-clj
+    && apt-get install -y build-essential
 
 # Install yarn
 RUN curl -o- -L yarnpkg.com/install.sh | bash
 ENV PATH="${PATH}:/root/.yarn/bin"
-
-RUN cd /code && make
 
 CMD /bin/bash -c "yarn run start_differ & yarn run start"
