use multistage builds for shrinking image size

--- a/.circleci/Dockerfile.publish
+++ b/.circleci/Dockerfile.publish
@@ -1,13 +1,21 @@
 FROM nutanix-docker.jfrog.io/papiea:yarn-base
 
-COPY ./papiea-engine /code
+COPY . /code
 WORKDIR /code/papiea-engine
 RUN cd /code \
     && apt-get update \
-    && apt-get install -y build-essential
+    && apt-get install -y build-essential \
+    && npm --prefix papiea-engine run build-clj
 
 # Install yarn
 RUN curl -o- -L yarnpkg.com/install.sh | bash
 ENV PATH="${PATH}:/root/.yarn/bin"
+
+RUN cd /code && make
+
+FROM nutanix-docker.jfrog.io/papiea:yarn-base
+
+COPY --from=0 /code/papiea-engine /code/papiea-engine
+WORKDIR /code/papiea-engine
 
 CMD /bin/bash -c "yarn run start_differ & yarn run start"
