fixed wrong imports & install yarn

--- a/.circleci/Dockerfile.publish
+++ b/.circleci/Dockerfile.publish
@@ -18,4 +18,8 @@ FROM nutanix-docker.jfrog.io/papiea:yarn-base
 COPY --from=builder /code/papiea-engine /code/papiea-engine
 WORKDIR /code/papiea-engine
 
+# Install yarn
+RUN curl -o- -L yarnpkg.com/install.sh | bash
+ENV PATH="${PATH}:/root/.yarn/bin"
+
 CMD /bin/bash -c "yarn run start_differ & yarn run start"
