--- a/papiea-backend-utils/package.json
+++ b/papiea-backend-utils/package.json
@@ -10,12 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^13.13.4",
-    "typescript": "^3.8.3"
+    "@types/node": "^13.13.4"
   },
   "dependencies": {
     "logform": "^2.1.2",
     "papiea-core": "file:../papiea-core",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "typescript": "^3.8.3"
   }
 }
