--- a/papiea-engine/__benchmarks__/package.json
+++ b/papiea-engine/__benchmarks__/package.json
@@ -20,12 +20,12 @@
     "papiea-sdk": "file:../../papiea-sdk/typescript",
     "papiea-core": "file:../../papiea-core",
     "autocannon": "^4.6.0",
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/node": "^10.14.7",
     "ts-node": "^7.0.1",
-    "typescript": "^3.8.3",
     "@types/autocannon": "^4.1.0"
   },
   "jest": {
