--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -53,7 +53,8 @@
     "swagger-ui-express": "^4.0.7",
     "ts-node": "^7.0.1",
     "uuid": "^3.3.2",
-    "uuid-validate": "0.0.3"
+    "uuid-validate": "0.0.3",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
@@ -73,8 +74,7 @@
     "jest-junit": "^5.2.0",
     "nodemon": "^1.18.8",
     "swagger-parser": "^6.0.2",
-    "ts-jest": "^23.10.5",
-    "typescript": "^3.8.3"
+    "ts-jest": "^23.10.5"
   },
   "jest": {
     "transform": {
