--- a/papiea-sdk/typescript/package.json
+++ b/papiea-sdk/typescript/package.json
@@ -24,7 +24,8 @@
     "papiea-core": "file:../../papiea-core",
     "pluralize": "^7.0.0",
     "swagger-model-validator": "^3.0.6",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "typescript": "^3.8.3"
   },
   "description": "",
   "devDependencies": {
@@ -35,7 +36,6 @@
     "@types/uuid": "^3.4.4",
     "jest": "^23.6.0",
     "jest-junit": "^5.2.0",
-    "ts-jest": "^23.10.5",
-    "typescript": "^3.8.3"
+    "ts-jest": "^23.10.5"
   }
 }
