--- a/.circleci/Dockerfile.publish
+++ b/.circleci/Dockerfile.publish
@@ -14,6 +14,8 @@ ENV NODE_ENV=production
 
 RUN cd /code && make
 
+RUN cd /code && make remove_dev_deps
+
 FROM node:14
 
 COPY --from=builder /code/papiea-engine /code/papiea-engine
