--- a/papiea-engine/__benchmarks__/package.json
+++ b/papiea-engine/__benchmarks__/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^10.14.7",
-    "@types/autocannon": "^4.1.0",
+    "@types/autocannon": "^4.1.0"
   },
   "jest": {
     "transform": {
