change run command to exclude typescript shenanigans

--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -11,8 +11,8 @@
     "clean": "rm -rf build",
     "build": "yarn run tsc",
     "build!": "npm run clean && npm run build",
-    "start": "ts-node src/main.ts",
-    "start_differ": "ts-node src/diff_resolver_main.ts",
+    "start": "node build/main.js",
+    "start_differ": "node build/diff_resolver_main.js",
     "test": "jest --runInBand --coverage",
     "test-ci": "jest --runInBand --coverage --ci --reporters=default --reporters=jest-junit",
     "dev": "./node_modules/nodemon/bin/nodemon.js",
