--- a/.circleci/docker-compose.yml
+++ b/.circleci/docker-compose.yml
@@ -4,7 +4,7 @@ services:
                 container_name: papiea-engine
                 build:
                         dockerfile: Dockerfile
-                        target: builder
+                        target: debug
                         context: .
                 environment:
                         - JEST_JUNIT_OUTPUT=reports/junit/results.xml
