Reducing publish size (#483)
* reducing publish size

* fixing dockerfiles

* fixed dockerfile name

* use multistage builds for shrinking image size

* cleaner builder pattern

* fixed wrong imports & install yarn

* change base to make image smaller

* added node env prod variable and modified docker ignore

* move typescript to dependency

* script to remove dev deps

* rearranged deps

* removed env node production

* include typescript in deps

* fix comma

* change run command to exclude typescript shenanigans

* copy files to make things runnable by pure node

* closer specified the ignore for tests and benchmarks

* use single Dockerfile

* specify target in compose file

* fix compose version

* added stage 3 (debug)

* 2 methods of getting rid of unnecessary files

* moved remove test & benchmarks command + testing pure ubuntu

* install curl

* changed install curl to update && upgrade

* installing curl

--- a/.circleci/docker-compose.yml
+++ b/.circleci/docker-compose.yml
@@ -1,9 +1,10 @@
-version: '3'
+version: '3.5'
 services:
         papiea-engine:
                 container_name: papiea-engine
                 build:
                         dockerfile: Dockerfile
+                        target: debug
                         context: .
                 environment:
                         - JEST_JUNIT_OUTPUT=reports/junit/results.xml
