--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,6 +82,12 @@ jobs:
 
       - run: ./papiea-engine/publish-images.py
 
+      - run:
+          name: Login to git as Update Bot
+          command: |
+            git config user.email "<>"
+            git config user.name "Version Updater Bot"
+
       - run: ./papiea-engine/npm-login.py
 
       - run: ./switch-registry.sh nutanix
