--- a/papiea-core/package.json
+++ b/papiea-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "papiea-core",
-  "version": "1.0.106",
+  "version": "1.0.111+99",
   "description": "Core 'header' files for papiea",
   "main": "build/core.js",
   "scripts": {
