Adds SemVer support to papiea packages (#497)
* added script for typescript semver

* added typescript semver to pipeline

* fix to -circle_num param in bash script

* introduced docker semver pipeline

* optimize docker hub semver push

* create regular commit & release scripts. Adapted python for 3.5

* running publish images release from upgrade-versions.sh

* fixes to docker semver, adding python semver

* bump version

* [skip ci] Upgrade versions. Engine: . Typescript: 1.0.105. Python: 344b2011f9d425d525e7c302cdcd471393b55acb.

* dummy commit

* [skip ci] Upgrade versions. Engine: Publishing nutanix-docker.jfrog.io/papiea:1.0.118_1432. Typescript: 1.0.118+1432. Python: 421488c722a3bf94a30676ebf5c3397e53b8953b.

* Adjusted error message

* [skip ci] Upgrade versions. Engine: Publishing nutanix-docker.jfrog.io/papiea:1.0.119_1435. Typescript: 1.0.119+1435. Python: 83c1d1214eef6007fe7a73a50cdd459c10efbbb2.

* bump versions and refactor return code

* don't capture output + flush

* [skip ci] Upgrade versions. Engine: 1.0.201_1439: digest: sha256:16c3360c68a19eb405e3a7acf684f4793bb83bd1d90b3220c546a9bd7b0eed37 size: 1787. Typescript: 1.0.201+1439. Python: e87b653c050bec78e984c3fac06c230f52ee56ce.

* display output in shell

* [skip ci] Upgrade versions. Engine: Login Succeeded. Typescript: 1.0.209+1443. Python: 54763e33e41264f9d31dbc30e0f5f9fe55e786ce.

* fix tag

* [skip ci] Upgrade versions. Engine: nutanix-docker.jfrog.io/papiea:1.0.210_1446. Typescript: 1.0.210+1446. Python: 74d01a0a3fb66c5a38cb866ed800ab04ebc302e6.

* start integrating python semver into pipeline

* chmod and description to the publish script

* bump version

* added pip & bump version

* fixing publish python sdk scripts

* fix path

* added sudo to pip install

* try pypi-local instead of remote

* [skip ci] Upgrade versions. Engine: nutanix-docker.jfrog.io/papiea:1.0.219_1479. Typescript: 1.0.219+1479. Python: 1.0.219+1479.

* ren

--- a/papiea-client/package.json
+++ b/papiea-client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "papiea-client",
   "description": "",
-  "version": "1.0.303",
+  "version": "1.0.220+1483",
   "main": "build/entity_client.js",
   "scripts": {
     "clean": "rm -rf build",
