--- a/papiea-backend-utils/package.json
+++ b/papiea-backend-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "papiea-backend-utils",
-  "version": "1.0.303",
+  "version": "1.0.220+1483",
   "description": "Papiea backend library -- functionality common to both -engine and -sdk",
   "main": "build/index.js",
   "scripts": {
