--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "papiea-engine",
-  "version": "1.0.303",
+  "version": "1.0.220+1483",
   "description": "",
   "main": "build/main.js",
   "files": [
