--- a/papiea-engine/docker-compose-debug.yml
+++ b/papiea-engine/docker-compose-debug.yml
@@ -13,7 +13,7 @@ services:
                         - "9229:9229"
                         - "9228:9228"
                 environment:
-                        - PAPIEA_ADMIN_S2S_KEY=${PAPIEA_ADMIN_S2S_KEY}
+                        - PAPIEA_ADMIN_KEY=${PAPIEA_ADMIN_S2S_KEY}
                         - PAPIEA_PUBLIC_URL=${PAPIEA_PUBLIC_URL}
                         - HOT_RELOAD=true
                         - PAPIEA_DEBUG=true
