--- a/papiea-engine/docker-compose.yml
+++ b/papiea-engine/docker-compose.yml
@@ -11,9 +11,9 @@ services:
                 ports:
                         - "3333:3000"
                 environment:
-                        - PAPIEA_ADMIN_S2S_KEY=${PAPIEA_ADMIN_S2S_KEY}
+                        - PAPIEA_ADMIN_KEY=${PAPIEA_ADMIN_S2S_KEY}
                         - PAPIEA_PUBLIC_URL=${PAPIEA_PUBLIC_URL}
                         - HOT_RELOAD=${HOT_RELOAD:-false}
-                        - LOGGING_LEVEL=${LOGGING_LEVEL:-info}
+                        - PAPIEA_LOGGING_LEVEL=${LOGGING_LEVEL:-info}
         mongo:
                 image: mongo:4.1
