--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,6 +104,6 @@ workflows:
       - release:
           requires:
             - build
-          filters:
-            branches:
-              only: master
+#          filters:
+#            branches:
+#              only: master
