--- a/papiea-core/tsconfig.json
+++ b/papiea-core/tsconfig.json
@@ -10,5 +10,5 @@
     "baseUrl": ".",
     "rootDir": "src"
   },
-  "exclude": ["node_modules", "**/__tests__/*", "build"]
+  "exclude": ["node_modules", "**/__tests__/*"]
 }
