--- a/papiea-client/tsconfig.json
+++ b/papiea-client/tsconfig.json
@@ -15,5 +15,5 @@
       ]
     }
   },
-  "exclude": ["node_modules", "**/__tests__/*"]
+  "exclude": ["node_modules", "**/__tests__/*", "build"]
 }
