--- a/papiea-engine/tsconfig.json
+++ b/papiea-engine/tsconfig.json
@@ -15,5 +15,5 @@
       ]
     }
   },
-  "exclude": ["node_modules", "**/__tests__/*", "**/__benchmarks__/*"]
+  "exclude": ["node_modules", "**/__tests__/*", "**/__benchmarks__/*", "build"]
 }
