Add python sdk tests (#495)
* setting infrastructure for python tests

* Add sdk tests for the python sdk

* Add sdk tests for the python sdk

* Added some entity level tests for the python sdk

* Setup created for the file-system e2e testing in python inside __tests__ dir

* Setup created for the file-system e2e testing in python inside __tests__ dir

* Added entity structure for bucket and object type

* Added entity and kind level procedure handlers

* Added test to check the EnsureBucketExists kind procedure

* Added basic test scenario. All spec changes written and tested

* Bug fixes in python sdk and added entity related tests to match with latest scenario decision

* Minor sdk changes, added bucket name in object schema and defined intent resolver functions

* Completed all entity operation related tests, added intent change handlers and related tests

* Modified status-only field access from entity procedures to intent resolvers, changed test assert validations for the same

* Added tests to validate bucket and object create intent handler

* Added IntentWatcherApi to perform intent watcher related api calls in papiea

* Review fix: Moved the provider related code to a new file, reverted IntentWatcher code to clean this PR

* Minor PR fixes: Changed empty entity return to raise exception

* Modified exception handler in papiea api to handle additional exceptions

* Modified the error message for entity not found error

* Added python3.8 dependency and make cmd to run python e2e tests

* Testing failed sdk test in the pipeline

* Reverted commit caf2bddcd957eea25b5355c59070ca4e96b7ec98

Co-authored-by: igorkorotach <igorkorotach@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
           command: |
             docker-compose exec papiea-engine npm run test-ci
             docker-compose exec papiea-engine bash -c 'cd /code/papiea-sdk/typescript && npm test'
+            docker-compose exec papiea-engine bash -c 'cd /code/papiea-sdk/python/e2e_tests && python3.8 -m pip install -r requirements.txt && python3.8 -m pytest -s --disable-pytest-warnings'
             docker cp papiea-engine:/code/papiea-engine/reports . || echo .
             docker cp papiea-engine:/code/papiea-engine/coverage . || echo .
             docker cp papiea-engine:/code/papiea-engine/src/logs . || echo .
