--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -31,6 +31,7 @@
     "@types/atob": "^2.1.2",
     "@types/btoa": "^1.2.3",
     "@types/deep-equal": "^1.0.1",
+    "@types/jaeger-client": "^3.15.4",
     "atob": "^2.1.2",
     "axios": "^0.18.1",
     "btoa": "^1.2.1",
@@ -39,12 +40,14 @@
     "deep-equal": "^2.0.2",
     "express": "^4.16.4",
     "express-async-handler": "^1.1.4",
+    "jaeger-client": "^3.18.1",
     "js-yaml": "^3.12.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.13",
     "mnemonist": "^0.30.0",
     "mongodb": "^3.1.10",
     "morgan": "^1.9.1",
+    "opentracing": "^0.14.5",
     "papiea-backend-utils": "file:../papiea-backend-utils",
     "papiea-core": "file:../papiea-core",
     "pluralize": "^7.0.0",
