tracing across multiple services (PoC stage)

--- a/papiea-engine/package.json
+++ b/papiea-engine/package.json
@@ -14,8 +14,8 @@
     "build!": "npm run clean && npm run build",
     "start": "node build/main.js",
     "start_differ": "node build/diff_resolver_main.js",
-    "test": "jest --runInBand --coverage",
-    "test-ci": "jest --runInBand --coverage --ci --reporters=default --reporters=jest-junit",
+    "test": "jest --runInBand",
+    "test-ci": "jest --runInBand --ci --reporters=default --reporters=jest-junit",
     "dev": "./node_modules/nodemon/bin/nodemon.js",
     "debug": "./node_modules/nodemon/bin/nodemon.js --config nodemon_debug.json",
     "debug_differ": "./node_modules/nodemon/bin/nodemon.js --config nodemon_debug_differ.json",
