--- a/papiea-backend-utils/package.json
+++ b/papiea-backend-utils/package.json
@@ -14,7 +14,12 @@
     "typescript": "^4.1"
   },
   "dependencies": {
+    "@types/express": "^4.17.9",
+    "@types/jaeger-client": "^3.15.4",
+    "express": "^4.17.1",
+    "jaeger-client": "^3.18.1",
     "logform": "^2.1.2",
+    "opentracing": "^0.14.5",
     "papiea-core": "file:../papiea-core",
     "winston": "^3.3.3"
   }
