Removed requirement for input field in the procedures input.
- Removed requirement for input field in procedure's input.
- Added new tests and fixed old ones to use the new input schema changes for procedure calls.

--- a/papiea-engine/__tests__/test_data/procedure_geolocation_compute_input.yml
+++ b/papiea-engine/__tests__/test_data/procedure_geolocation_compute_input.yml
@@ -1,4 +1,9 @@
 RegionIdentifier:
-  type: string
-  title: Identifier of a region
+  type: object
+  title: Object include identifier of a region
   description: Used to get a particular server region number
+  required:
+    - region_id
+  properties:
+    region_id:
+        type: string
