--- a/papiea-client/package.json
+++ b/papiea-client/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.1",
-    "papiea-core": "file:../papiea-core"
+    "papiea-core": "file:../papiea-core",
+    "papiea-backend-utils": "file:../papiea-backend-utils",
+    "opentracing": "^0.14.5"
   },
   "devDependencies": {
     "@types/jest": "^26.0.3",
