--- a/papiea-sdk/python/e2e_tests/requirements.txt
+++ b/papiea-sdk/python/e2e_tests/requirements.txt
@@ -7,11 +7,10 @@ chardet==3.0.4
 cryptography==3.2
 Deprecated==1.2.10
 idna==2.10
-inflect==4.1.0
-keyring==10.6.0
-keyrings.alt==3.0
+jaeger-client==4.4.0
 more-itertools==8.4.0
 multidict==4.7.6
+opentracing==2.4.0
 packaging==20.4
 pluggy==0.13.1
 py==1.9.0
@@ -24,6 +23,8 @@ PyYAML==5.3.1
 requests==2.24.0
 SecretStorage==2.3.1
 six==1.15.0
-urllib3==1.25.10
+threadloop==1.0.2
+thrift==0.13.0
+tornado==6.1
 wcwidth==0.2.5
 yarl==1.4.2
