Modified express middleware to accept non-json values for axios requests

--- a/papiea-engine/__tests__/test_data/procedure_geolocation_compute_input.yml
+++ b/papiea-engine/__tests__/test_data/procedure_geolocation_compute_input.yml
@@ -1,9 +1,3 @@
 RegionIdentifier:
-  type: object
-  title: Object include identifier of a region
-  description: Used to get a particular server region number
-  required:
-    - region_id
-  properties:
-    region_id:
-        type: string
+  type: string
+  title: Identifier of a region
