--- a/papiea-engine/__tests__/test_data/procedure_move_input.yml
+++ b/papiea-engine/__tests__/test_data/procedure_move_input.yml
@@ -1,9 +1,4 @@
 MoveInput:
-  type: object
-  title: Input object to the move function
-  description: The x field contains the move in a particular direction
-  required:
-    - x
-  properties:
-    x:
-        type: number
+    type: string
+    title: Input value to move functions
+    description: The amount to move in a particular direction
