Revert "Modified express middleware to accept non-json values for axios requests"
This reverts commit f77acc614dddc759270453fb965599b04ecc15b2.
We decided that it's a bad practice to specify non-json input like a string or number and hence do not need these changes.

--- a/papiea-engine/__tests__/test_data/procedure_move_input.yml
+++ b/papiea-engine/__tests__/test_data/procedure_move_input.yml
@@ -1,4 +1,9 @@
 MoveInput:
-    type: string
-    title: Input value to move functions
-    description: The amount to move in a particular direction
+  type: object
+  title: Input object to the move function
+  description: The x field contains the move in a particular direction
+  required:
+    - x
+  properties:
+    x:
+        type: number
